# web_bakend

./: .gitignore  Cargo.toml
db/: ura_loader.sql
public/: index.html
public/layaut/: index.html  main.css
src/: config.rs  main.rs  utils.rs
src/data/: user.rs
src/long_lines/: mime_hashmap.txt
src/model/: mod.rs  user.rs
src/router/: api.rs  mod.rs
