[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.9.5"
lazy-regex = "3.0.1"
rouille = "3.6.2"
once_cell = "1.18.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mac_address = "1.1.5"
sqlite = "0.31.1"
const_format = "0.2.31"

[dependencies.uuid]
version = "1.4.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics"
]